--- a/VendorOrderTracker/Views/Orders/New.cshtml
+++ b/VendorOrderTracker/Views/Orders/New.cshtml
@@ -4,8 +4,8 @@
   <input id="vendorId" name="vendorId" type="hidden" value="@Model.Id">
   <label for="title">Order Title</label>
   <input id="title" name="title" type="text">
-  <label for="descripton">Order descripton</label>
-  <input id="description" name="descripton" type="text">
+  <label for="description">Order descripton</label>
+  <input id="description" name="description" type="text">
   <label for="price">Order price</label>
   <input id="price" name="price" type="number">
   <button type='submit'>Add Order</button>
